<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_star_white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_dark_mode"
        android:title="@string/dark_mode"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_language"
        android:title="@string/language_switch"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>
